--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write --experimental-cli src/"
   },
   "dependencies": {
+    "@amap/amap-jsapi-loader": "^1.0.1",
     "axios": "^1.13.6",
     "element-plus": "^2.13.2",
     "pinia": "^3.0.4",
